rough fix for too large pages

--- a/src/css/blocks/_singlePageLesson.scss
+++ b/src/css/blocks/_singlePageLesson.scss
@@ -4,7 +4,7 @@
   margin-right: 20px;
   background-color: color('white', 'lightest');
   color: color('grey', 'darkest');
-  position: relative;
+  // position: relative;
 }
 
 .single_page_lesson__header1 {
@@ -26,11 +26,11 @@
 }
 
 .single_page_lesson__diagram_container {
-  position: absolute;
-  // width: 100%;
-  // height: 100%;
-  width: 500px;
-  height: 2000px;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  // width: 500px;
+  // height: 2000px;
   left: 0;
   top: 0;
 }
